erDiagram
  AUTH_USERS ||--|| PROFILES : owns
  ORGS ||--o{ MEMBERSHIPS : has
  AUTH_USERS ||--o{ MEMBERSHIPS : joins
  ORGS ||--o{ ORG_CONTACTS : has
  AUTH_USERS ||--o{ ORG_CONTACTS : may_link
  ORGS ||--o{ DOGS : owns
  ORGS ||--o{ TRANSPORTS : owns
  ORGS ||--o{ MEDICAL_RECORDS : owns
  ORGS ||--o{ EXPENSES : owns
  ORGS ||--o{ DOG_PHOTOS : owns
  ORGS ||--o{ DOCUMENTS : owns
  ORGS ||--o{ ACTIVITY_EVENTS : owns
  ORGS ||--o{ TASKS : owns
  DOGS ||--o{ TRANSPORTS : may_include
  DOGS ||--o{ MEDICAL_RECORDS : tracks
  DOGS ||--o{ EXPENSES : costs
  DOGS ||--o{ DOG_PHOTOS : images
  ORG_CONTACTS ||--o{ DOGS : assigns_foster_or_responsible
  ORG_CONTACTS ||--o{ TRANSPORTS : assigns_driver
  MEMBERSHIPS ||--o{ DOGS : assigns_responsible
  MEMBERSHIPS ||--o{ TRANSPORTS : assigns_driver
  MEMBERSHIPS ||--o{ TASKS : may_assign
  MEMBERSHIPS ||--o{ ACTIVITY_EVENTS : actor
  TRANSPORTS ||--o{ ACTIVITY_EVENTS : logged
  DOCUMENTS ||--o{ ACTIVITY_EVENTS : logged

  ORGS {
    uuid id PK
    text name
    jsonb settings
    timestamptz created_at
  }
  PROFILES {
    uuid user_id PK,FK
    text full_name
    text avatar_url
  }
  MEMBERSHIPS {
    uuid id PK
    uuid org_id FK
    uuid user_id FK
    text[] roles
    bool active
  }
  ORG_CONTACTS {
    uuid id PK
    uuid org_id FK
    text kind
    text display_name
    citext email
    text phone
    text[] roles
    uuid linked_user_id FK
    uuid linked_membership_id FK
  }
  DOGS {
    uuid id PK
    uuid org_id FK
    text stage
    text name
    text location
    text description
    uuid responsible_membership_id FK
    uuid foster_membership_id FK
    uuid responsible_contact_id FK
    uuid foster_contact_id FK
    jsonb extra_fields
  }
  TRANSPORTS {
    uuid id PK
    uuid org_id FK
    uuid dog_id FK
    text status
    uuid assigned_membership_id FK
    uuid assigned_contact_id FK
    timestamptz window_start
    timestamptz window_end
    jsonb extra_fields
  }
  MEDICAL_RECORDS {
    uuid id PK
    uuid org_id FK
    uuid dog_id FK
    text record_type
    date occurred_on
    jsonb extra_fields
  }
  EXPENSES {
    uuid id PK
    uuid org_id FK
    uuid dog_id FK
    text category
    numeric amount
    date incurred_on
  }
  DOG_PHOTOS {
    uuid id PK
    uuid org_id FK
    uuid dog_id FK
    text storage_path
    bool is_primary
  }
  DOCUMENTS {
    uuid id PK
    uuid org_id FK
    text entity_type
    uuid entity_id
    text storage_path
  }
  TASKS {
    uuid id PK
    uuid org_id FK
    text title
    text description
    text status
    text priority
    timestamptz due_at
    text link_type
    uuid link_id
    uuid assigned_membership_id FK
    timestamptz created_at
    timestamptz updated_at
  }
  ACTIVITY_EVENTS {
    uuid id PK
    uuid org_id FK
    timestamptz created_at
    uuid actor_user_id FK
    uuid actor_membership_id FK
    text entity_type
    uuid entity_id
    text event_type
    jsonb payload
  }
